feat(all): style logo with nav

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="main-header">
             <h1 class="main-logo">
                 <a href="index.html">
-                    <img src="http://placehold.it/180x100" alt="Sebastian Nadeau">
+                    <img class="logo-img" src="http://placehold.it/180x100" alt="Sebastian Nadeau">
                 </a>
             </h1>
             <nav>
