feat(all): create banner on typography page

--- a/typography/index.html
+++ b/typography/index.html
@@ -3,3 +3,9 @@ layout: default
 ---
 
 <h1>Typography</h1>
+
+<section>
+    <figure class="banner">
+        <figcaption><h4>Typography</h4></figcaption>
+    </figure>
+</section>
