feat(all): create new banners for each page

--- a/illustration/index.html
+++ b/illustration/index.html
@@ -3,3 +3,9 @@ layout: default
 ---
 
 <h1>Illustration</h1>
+
+<section>
+    <figure class="banner illustration">
+        <figcaption><h4>Illustration</h4></figcaption>
+    </figure>
+</section>
