--- a/interactive/index.html
+++ b/interactive/index.html
@@ -3,3 +3,9 @@ layout: default
 ---
 
 <h1>Interactive</h1>
+
+<section>
+    <figure class="banner interactive">
+        <figcaption><h4>Interactive</h4></figcaption>
+    </figure>
+</section>
