--- a/motion/index.html
+++ b/motion/index.html
@@ -3,3 +3,9 @@ layout: default
 ---
 
 <h1>Motion</h1>
+
+<section>
+    <figure class="banner motion">
+        <figcaption><h4>Motion</h4></figcaption>
+    </figure>
+</section>
