--- a/typography/index.html
+++ b/typography/index.html
@@ -5,7 +5,7 @@ layout: default
 <h1>Typography</h1>
 
 <section>
-    <figure class="banner">
+    <figure class="banner typo">
         <figcaption><h4>Typography</h4></figcaption>
     </figure>
 </section>
