--- a/all/index.html
+++ b/all/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1 class="push-top">All Projects</h1>
+<h1>All Projects</h1>
 
 <section>
     <figure class="banner typo">
