refactor(html): copy typography section into new include file

--- a/typography.html
+++ b/typography.html
@@ -4,46 +4,4 @@ layout: default
 
 <h1>Typography</h1>
 
-<section>
-    <figure class="banner typo">
-        <figcaption><h4>Typography</h4></figcaption>
-    </figure>
-</section>
-
-<div class="grid">
-    <figure class="unit unit-s-1 unit-m-1-2 unit-l-1-3 unit-h-1-2">
-        <a href="#">
-            <img src="http://placehold.it/300x200" alt="Project 1">
-            <figcaption>
-                <h4>Project 1</h4>
-            </figcaption>
-        </a>
-    </figure>
-    
-    <figure class="unit unit-s-1 unit-m-1-2 unit-l-1-3 unit-h-1-2">
-        <a href="#">
-            <img src="http://placehold.it/300x200" alt="Project 2">
-            <figcaption>
-                <h4>Project 2</h4>
-            </figcaption>
-        </a>
-    </figure>
-
-    <figure class="unit unit-s-1 unit-m-1-2 unit-l-1-3 unit-h-1-2">
-        <a href="#">
-            <img src="http://placehold.it/300x200" alt="Project 3">
-            <figcaption>
-                <h4>Project 3</h4>
-            </figcaption>
-        </a>
-    </figure>
-
-    <figure class="unit unit-s-1 unit-m-1-2 unit-l-hidden unit-h-1-2">
-        <a href="#">
-            <img src="http://placehold.it/300x200" alt="Project 4">
-            <figcaption>
-                <h4>Project 4</h4>
-            </figcaption>
-        </a>
-    </figure>
-</div>
+{% include typography.html %}
