feat(html): create pages for type, illustration, interactive, and motion

--- a/illustration.html
+++ b/illustration.html
@@ -9,3 +9,5 @@ layout: default
         <figcaption><h4>Illustration</h4></figcaption>
     </figure>
 </section>
+
+{% include illustration.html %}
