--- a/typography.html
+++ b/typography.html
@@ -4,4 +4,10 @@ layout: default
 
 <h1>Typography</h1>
 
+<section>
+    <figure class="banner typo">
+        <figcaption><h4>Typography</h4></figcaption>
+    </figure>
+</section>
+
 {% include typography.html %}
