refactor(html): change grid structure of nav pages

--- a/all.html
+++ b/all.html
@@ -10,7 +10,7 @@ layout: default
     </figure>
 </section>
 
-
+{% include typography.html %}
 
 <section>
     <figure class="banner illustration">
@@ -18,7 +18,7 @@ layout: default
     </figure>
 </section>
 
-
+{% include illustration.html %}
 
 <section>
     <figure class="banner interactive">
@@ -26,9 +26,12 @@ layout: default
     </figure>
 </section>
 
+{% include interactive.html %}
 
 <section>
     <figure class="banner motion">
         <figcaption><h4>Motion</h4></figcaption>
     </figure>
 </section>
+
+{% include motion.html %}
