feat(all): create more breathing space on nav headlines

--- a/typography.html
+++ b/typography.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1>Typography</h1>
+<h1 id="breathing-space">Typography</h1>
 
 <section>
     <figure class="banner typo">
@@ -13,6 +13,6 @@ layout: default
 {% include typography.html %}
 
 <div class="push-top-double push-bottom-double">
-    <h2>Behind the Type</h2>
+    <h2 id="breathing-space">Behind the Type</h2>
     <p id="columns">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis lobortis quam id venenatis. Integer eget pulvinar elit. Nunc magna mauris, sollicitudin eget ex quis, sagittis pretium velit. Morbi eget tortor vel massa iaculis tincidunt in eget nunc. Curabitur ornare faucibus fringilla. Praesent magna neque, auctor ac euismod sed, suscipit sed lorem. Curabitur euismod tellus et nibh condimentum mollis. Phasellus eleifend semper augue, ut feugiat orci fringilla non. Cras vel ultricies eros. Sed sed ante a ante gravida efficitur quis non dui. Fusce sagittis ullamcorper metus et tempus.</p>
 </div>
