feat(all): create responsive previews on home page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 PORTFOLIO PREVIEW SECTION
 -->
 
-<div class="grid">
+<div class="grid previews-home">
     <figure class="unit unit-s-1 unit-m-1-2">
         <a href="#">
             <img src="http://placehold.it/300x200" alt="Typography">
