feat(all): create round top right corner on banners

--- a/all.html
+++ b/all.html
@@ -6,7 +6,7 @@ layout: default
 
 <section>
     <figure class="banner typo">
-        <figcaption><h4>Typography</h4></figcaption>
+        <figcaption id="tab"><h4>Typography</h4></figcaption>
     </figure>
 </section>
 
@@ -14,7 +14,7 @@ layout: default
 
 <section>
     <figure class="banner illustration">
-        <figcaption><h4>Illustration</h4></figcaption>
+        <figcaption id="tab"><h4>Illustration</h4></figcaption>
     </figure>
 </section>
 
@@ -22,7 +22,7 @@ layout: default
 
 <section>
     <figure class="banner interactive">
-        <figcaption><h4>Interactive</h4></figcaption>
+        <figcaption id="tab"><h4>Interactive</h4></figcaption>
     </figure>
 </section>
 
@@ -30,7 +30,7 @@ layout: default
 
 <section>
     <figure class="banner motion">
-        <figcaption><h4>Motion</h4></figcaption>
+        <figcaption id="tab"><h4>Motion</h4></figcaption>
     </figure>
 </section>
 
