--- a/illustration.html
+++ b/illustration.html
@@ -6,7 +6,7 @@ layout: default
 
 <section>
     <figure class="banner illustration">
-        <figcaption><h4>Illustration</h4></figcaption>
+        <figcaption id="tab"><h4>Illustration</h4></figcaption>
     </figure>
 </section>
 
