--- a/interactive.html
+++ b/interactive.html
@@ -6,7 +6,7 @@ layout: default
 
 <section>
     <figure class="banner interactive">
-        <figcaption><h4>Interactive</h4></figcaption>
+        <figcaption id="tab"><h4>Interactive</h4></figcaption>
     </figure>
 </section>
 
