--- a/motion.html
+++ b/motion.html
@@ -6,7 +6,7 @@ layout: default
 
 <section>
     <figure class="banner motion">
-        <figcaption><h4>Motion</h4></figcaption>
+        <figcaption id="tab"><h4>Motion</h4></figcaption>
     </figure>
 </section>
 
