--- a/typography.html
+++ b/typography.html
@@ -6,7 +6,7 @@ layout: default
 
 <section>
     <figure class="banner typo">
-        <figcaption><h4>Typography</h4></figcaption>
+        <figcaption id="tab"><h4>Typography</h4></figcaption>
     </figure>
 </section>
 
