--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ PORTFOLIO PREVIEW SECTION
 -->
 
 <div class="grid previews-home">
-    <figure class="unit unit-s-1 unit-m-1-2">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
         <a href="#">
             <img src="http://placehold.it/300x200" alt="Typography">
             <figcaption>
@@ -18,7 +18,7 @@ PORTFOLIO PREVIEW SECTION
         </a>
     </figure>
     
-    <figure class="unit unit-s-1 unit-m-1-2">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
         <a href="#">
             <img src="http://placehold.it/300x200" alt="Illustration">
             <figcaption>
@@ -27,7 +27,7 @@ PORTFOLIO PREVIEW SECTION
         </a>
     </figure>
 
-    <figure class="unit unit-s-1 unit-m-1-2">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
         <a href="#">
             <img src="http://placehold.it/300x200" alt="Interactive">
             <figcaption>
@@ -36,7 +36,7 @@ PORTFOLIO PREVIEW SECTION
         </a>
     </figure>
 
-    <figure class="unit unit-s-1 unit-m-1-2">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
         <a href="#">
             <img src="http://placehold.it/300x200" alt="Motion">
             <figcaption>
