refactor(html): change path structure of pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ PORTFOLIO PREVIEW SECTION
 
 <div class="grid previews-home">
     <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
-        <a href="#">
+        <a href="{{site.baseurl}}/typography">
             <img src="http://placehold.it/300x200" alt="Typography">
             <figcaption>
                 <h4>Typography</h4>
@@ -19,7 +19,7 @@ PORTFOLIO PREVIEW SECTION
     </figure>
     
     <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
-        <a href="#">
+        <a href="{{site.baseurl}}/illustration">
             <img src="http://placehold.it/300x200" alt="Illustration">
             <figcaption>
                 <h4>Illustration</h4>
@@ -28,7 +28,7 @@ PORTFOLIO PREVIEW SECTION
     </figure>
 
     <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
-        <a href="#">
+        <a href="{{site.baseurl}}/interactive">
             <img src="http://placehold.it/300x200" alt="Interactive">
             <figcaption>
                 <h4>Interactive</h4>
@@ -37,7 +37,7 @@ PORTFOLIO PREVIEW SECTION
     </figure>
 
     <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
-        <a href="#">
+        <a href="{{site.baseurl}}/motion">
             <img src="http://placehold.it/300x200" alt="Motion">
             <figcaption>
                 <h4>Motion</h4>
