--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ PORTFOLIO PREVIEW SECTION
 
 <div class="grid previews-home">
     <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
-        <a href="{{site.baseurl}}/typography">
+        <a href="{{site.baseurl}}/typography/">
             <img src="http://placehold.it/300x200" alt="Typography">
             <figcaption>
                 <h4>Typography</h4>
