--- a/illustration/tennis-serve.html
+++ b/illustration/tennis-serve.html
@@ -38,7 +38,7 @@ layout: default
             <img src="http://placehold.it/1100x1700">
         </div>
         
-        <div class="unit unit-s-1-2 unit-m-1-3 unit-h-hidden">
+        <div class="unit unit-s-hidden unit-m-1-3 unit-h-hidden">
             <img src="http://placehold.it/1100x1700">
         </div>
     </div>
