add(html): add missing placeholder image

--- a/typography/bridgehead.html
+++ b/typography/bridgehead.html
@@ -39,7 +39,7 @@ layout: default
         </div>
         
         <div class="unit unit-s-1 unit-m-hidden unit-l-1-3">
-            <img src=>
+            <img src="http://placehold.it/1700x1100">
         </div>
     </div>
 </div>
