--- a/typography/bridgehead.html
+++ b/typography/bridgehead.html
@@ -23,7 +23,7 @@ layout: default
     
     <div class="grid">
         <div class="unit unit-s-1 unit-m-1-2 unit-l-1-2">
-            <img src="http://placehold.it/1700x1100">
+            <img src="{{site.baseurl}}/images/typography/bridgehead-2.jpg">
         </div>
         
         <div class="unit unit-s-1 unit-m-1-2 unit-l-1-2">
