feat(all): add all appropriate project images to lightbox

--- a/illustration/company-poster.html
+++ b/illustration/company-poster.html
@@ -16,7 +16,7 @@ layout: default
         <p id="columns">I’m a young adult at the age of 23 named Sebastian. I am someone who is constantly growing and expanding my knowledge base and am pursuing to take on new endeavours. I am a recent graduate from the Graphic Design program at Algonquin College and during my time there and beyond I put care and attention into the projects I work on. I am at the stage where I am trying different possibilities that are out there and am figuring out what excites me the most. Simple illustration, motion graphics, and interactive UI have really grabbed me and now I am devoting more of my attention into working with motion graphics. I really enjoy the type of work that is out there and that is available for Graphic Designers to work on.</p>
     </div>
     
-    <button id="open-tennis-serve-popup">
+    <button id="open-company-poster-popup">
         <img src="http://placehold.it/200x200" alt="Open Gallery">
         <p>View Gallery</p>
     </button>
