feat(all): add typography preview and banner

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ PORTFOLIO PREVIEW SECTION
 <div class="grid previews-home">
     <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
         <a href="{{site.baseurl}}/typography/">
-            <img src="http://placehold.it/300x200" alt="Typography">
+            <img src="{{site.baseurl}}/images/preview-typography.jpg" alt="Typography">
             <figcaption>
                 <h5>Typography</h5>
             </figcaption>
