feat(all): add illustration preview and banner to website

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ PORTFOLIO PREVIEW SECTION
     
     <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
         <a href="{{site.baseurl}}/illustration">
-            <img src="http://placehold.it/300x200" alt="Illustration">
+            <img src="{{site.baseurl}}/images/preview-illustration.jpg" alt="Illustration">
             <figcaption>
                 <h5>Illustration</h5>
             </figcaption>
