--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ PORTFOLIO PREVIEW SECTION
 
     <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
         <a href="{{site.baseurl}}/interactive">
-            <img src="http://placehold.it/300x200" alt="Interactive">
+            <img src="{{site.baseurl}}/images/preview-interactive.jpg" alt="Interactive">
             <figcaption>
                 <h5>Interactive</h5>
             </figcaption>
