feat(all): add preview and motion banner to website

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ PORTFOLIO PREVIEW SECTION
 
     <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
         <a href="{{site.baseurl}}/motion">
-            <img src="http://placehold.it/300x200" alt="Motion">
+            <img src="{{site.baseurl}}/images/preview-motion.jpg" alt="Motion">
             <figcaption>
                 <h5>Motion</h5>
             </figcaption>
