style(all): manage proper banner for each page and adjust type spacing

--- a/illustration/blues-brothers.html
+++ b/illustration/blues-brothers.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <section>
-    <figure class="banner typo">
+    <figure class="banner illustration">
         <figcaption id="tab">
             <h1>Illustration</h1>
         </figcaption>
