--- a/illustration/senator-campaign.html
+++ b/illustration/senator-campaign.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <section>
-    <figure class="banner typo">
+    <figure class="banner illustration">
         <figcaption id="tab">
             <h1>Illustration</h1>
         </figcaption>
