--- a/motion/blue-hen-farm.html
+++ b/motion/blue-hen-farm.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <section>
-    <figure class="banner typo">
+    <figure class="banner motion">
         <figcaption id="tab">
             <h1>Motion</h1>
         </figcaption>
