feat(all): create carousel sliding animation on home page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@ layout: default
     CAROUSEL
 -->
     
-
+<div class="home-page-carousel">
+    <div><img src="{{site.baseurl}}/images/banner-typography.jpg" alt="Typography"></div>
+    <div><img src="{{site.baseurl}}/images/banner-illustration.jpg" alt="Illustration"></div>
+    <div><img src="{{site.baseurl}}/images/banner-interactive.jpg" alt="Interactive"></div>
+    <div><img src="{{site.baseurl}}/images/banner-motion.jpg" alt="Motion"></div>
+</div>
+				
 
 {% include about.html %}
 
