style(all): create button navigation on carousel

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
     CAROUSEL
 -->
     
-<div class="home-page-carousel">
+<div class="home-page-carousel push-bottom-tripple">
     <div><img src="{{site.baseurl}}/images/banner-typography.jpg" alt="Typography"></div>
     <div><img src="{{site.baseurl}}/images/banner-illustration.jpg" alt="Illustration"></div>
     <div><img src="{{site.baseurl}}/images/banner-interactive.jpg" alt="Interactive"></div>
