--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@ layout: default
 -->
     
 <div class="home-page-carousel push-bottom-tripple">
-    <div><img src="{{site.baseurl}}/images/banner-typography.jpg" alt="Typography"></div>
-    <div><img src="{{site.baseurl}}/images/banner-illustration.jpg" alt="Illustration"></div>
-    <div><img src="{{site.baseurl}}/images/banner-interactive.jpg" alt="Interactive"></div>
-    <div><img src="{{site.baseurl}}/images/banner-motion.jpg" alt="Motion"></div>
+    <div class="banner-carousel typo"></div>
+    <div class="banner-carousel illustration"></div>
+    <div class="banner-carousel interactive"></div>
+    <div class="banner-carousel motion"></div>
 </div>
 				
 
