refactor(all): manage spacing between headlines and paragraphs

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ layout: default
 
 {% include profile.html %}
 
-<div class="about">
-    <div id="columns">
+<div class="about-section">
+    <div id="columns" class="about">
         <h2>About</h2>
         <p>Thank you for stopping by. It is my hope that in the next little while you will be curious and inspired by some thoughts and underlying pursuits that designers share that go beyond simply displaying information.</p>
         
