--- a/interactive/palisar.html
+++ b/interactive/palisar.html
@@ -17,7 +17,7 @@ layout: default
     </div>
     
     <button id="open-palisar-popup">
-        <img src="http://placehold.it/200x200" alt="Open Gallery">
+        <img src="{{site.baseurl}}/images/photo-icon.svg" alt="Open Image Gallery">
         <p>View Gallery</p>
     </button>
     
