--- a/typography/index.html
+++ b/typography/index.html
@@ -11,12 +11,9 @@ layout: default
 {% include typography.html %}
 
 <div class="push-top-double push-bottom-double">
-    <h2>Behind the Type</h2>
+    <h2>Typographic Designs</h2>
     <div id="columns">
-        <p>Thank you for stopping by. It is my hope that in the next little while you will be curious and inspired by some thoughts and underlying pursuits that designers share that go beyond simply displaying information.</p>
-        
-        <p>My goal is to really understand a community of people. I wish to understand their values, and what is important to them. It's important for me to understand those values because I want them to translate in the designs I create. I believe that great design happens when the design stirs an audience to engage in a message and react in a positive way. Either intellectually, emotionally, or even physically. When the viewer of a given design can resonate with it and share the same characteristics and values that it promotes, then it's good design. The role I pursue in the whole design process is to communicate positive values and have my designs really impact people in a positive way.</p> 
-        
-        <p>Welcome to my Graphic Design online portfolio. I invite you take a look around and enjoy the different projects that have been posted.</p>
+        <p>These projects will show you a taste of the typographic practice I use within my designs.</p>
+        <p>I align the contents of the articles and spreads in a grid system. Then I arrange the layout of the spreads in a way that is pleasing to look at, engaging to read, and legible. With some layouts I have been a bit experimental and have moved certain elements outside of the established grid system, while keeping esthetical pleasing spacing and vertical rhythm in mind.</p>
     </div>
 </div>
