--- a/illustration/index.html
+++ b/illustration/index.html
@@ -11,6 +11,9 @@ layout: default
 {% include illustration.html %}
 
 <div class="push-top-double push-bottom-double">
-    <h2>Behind the Illustrations</h2>
-    <p id="columns">I’m a young adult at the age of 23 named Sebastian. I am someone who is constantly growing and expanding my knowledge base and am pursuing to take on new endeavours. I am a recent graduate from the Graphic Design program at Algonquin College and during my time there and beyond I put care and attention into the projects I work on. I am at the stage where I am trying different possibilities that are out there and am figuring out what excites me the most. Simple illustration, motion graphics, and interactive UI have really grabbed me and now I am devoting more of my attention into working with motion graphics. I really enjoy the type of work that is out there and that is available for Graphic Designers to work on.</p>
+    <h2>Illustrative Design</h2>
+    <div id="columns">
+        <p>These illustrations are a sample of the style I enjoy working in.</p>
+        <p>Some of them are flat and graphic in nature such as the poster for Company and the Senators Campaign. While other styles are a bit more fluid using strokes and subtle gradients mixed with the medium such as in the Tennis Serve. I also enjoy coming with the initial design I will illustrate on paper and in one sample illustration I show how the final rendering was based off the rendered ink drawings.</p>
+    </div>
 </div>
