refactor(html): change title of typography page

--- a/typography/index.html
+++ b/typography/index.html
@@ -11,7 +11,7 @@ layout: default
 {% include typography.html %}
 
 <div class="push-top-double push-bottom-double">
-    <h2>Typography Practice</h2>
+    <h2>Typographic Design</h2>
     <div id="columns">
         <p>These projects will show you a taste of the typographic practice I use within my designs.</p>
         <p>I align the contents of the articles and spreads in a grid system. Then I arrange the layout of the spreads in a way that is pleasing to look at, engaging to read, and legible. With some layouts I have been a bit experimental and have moved certain elements outside of the established grid system, while keeping esthetical pleasing spacing and vertical rhythm in mind.</p>
