--- a/interactive/index.html
+++ b/interactive/index.html
@@ -11,6 +11,9 @@ layout: default
 {% include interactive.html %}
 
 <div class="push-top-double push-bottom-double">
-    <h2>Behind the Interactive Design</h2>
-    <p id="columns">I’m a young adult at the age of 23 named Sebastian. I am someone who is constantly growing and expanding my knowledge base and am pursuing to take on new endeavours. I am a recent graduate from the Graphic Design program at Algonquin College and during my time there and beyond I put care and attention into the projects I work on. I am at the stage where I am trying different possibilities that are out there and am figuring out what excites me the most. Simple illustration, motion graphics, and interactive UI have really grabbed me and now I am devoting more of my attention into working with motion graphics. I really enjoy the type of work that is out there and that is available for Graphic Designers to work on.</p>
+    <h2>Interactive Design</h2>
+    <div id="columns">
+        <p>During my time at Algonquin College I have created some interesting interactive projects.</p>
+        <p>One project included building an interactive dvd main menu, another involved building a website mockup in Photoshop for an ecommerce website. Other projects even involved designing a toy for a very young demographic with the focus on developing an intuitive and simple user experience. We also created a mockup for an ipad game where we considered how the user would interact with the interface. More recent projects involved the creation of two iphone apps.</p>
+    </div>
 </div>
