feat(html): add written content to motion page

--- a/motion/index.html
+++ b/motion/index.html
@@ -11,6 +11,9 @@ layout: default
 {% include motion.html %}
 
 <div class="push-top-double push-bottom-double">
-    <h2>Behind the Motion Design</h2>
-    <p id="columns">I’m a young adult at the age of 23 named Sebastian. I am someone who is constantly growing and expanding my knowledge base and am pursuing to take on new endeavours. I am a recent graduate from the Graphic Design program at Algonquin College and during my time there and beyond I put care and attention into the projects I work on. I am at the stage where I am trying different possibilities that are out there and am figuring out what excites me the most. Simple illustration, motion graphics, and interactive UI have really grabbed me and now I am devoting more of my attention into working with motion graphics. I really enjoy the type of work that is out there and that is available for Graphic Designers to work on.</p>
+    <h2>Motion Design</h2>
+    <div id="columns">
+        <p>I really love motion design and I plan on developing my skills further in this area.</p>
+        <p>I would like to bring sound animation principles woven into graphic design to create beautiful artistic motion graphics. I have some interesting projects posted up that serve to communicate a message through typography and moving graphics. I have my demo reel, a broadcast opener, an explainer video, as well as an animated infographic. These videos were created using After Effects and Illustrator. In the future I also plan on incorporating 3D into my work with Cinema 4D.</p>
+    </div>
 </div>
