feat(html): add written content to all pages

--- a/illustration/senator-campaign.html
+++ b/illustration/senator-campaign.html
@@ -12,8 +12,12 @@ layout: default
 
 <div id="project-wrapper">
     <div class="push-top-double push-bottom-double">
-        <h2>Senator Campaign</h2>
-        <p id="columns">I’m a young adult at the age of 23 named Sebastian. I am someone who is constantly growing and expanding my knowledge base and am pursuing to take on new endeavours. I am a recent graduate from the Graphic Design program at Algonquin College and during my time there and beyond I put care and attention into the projects I work on. I am at the stage where I am trying different possibilities that are out there and am figuring out what excites me the most. Simple illustration, motion graphics, and interactive UI have really grabbed me and now I am devoting more of my attention into working with motion graphics. I really enjoy the type of work that is out there and that is available for Graphic Designers to work on.</p>
+        <h2>Ottawa Senators Campaign</h2>
+        <div id="columns">
+            <p>This is a fictitious campaign created of the Ottawa Senators and their messages to promote the public to come watch the hockey players live at the game as opposed to just viewing the game on television.</p>
+            <p>All the scenes illustrated depict hockey moments that would be seen and witnessed live and the main slogan that ties in with that experience is “Share the Moment Live!”. The campaign also wants to promote a family pack deal where families can share discounts if they register tickets for the family instead of buying individual tickets. The output that these designs were going to were bus signs, printed adds, the facebook page and even skyscrapers.</p>
+            <p>The illustrations were first sketched out on paper and then created with Adobe Illustrator. Some watercolour brushes were used to add a bit of background texture in the mix to warm up the graphics. Then everything was brought together in InDesign for final output.</p>
+        </div>
     </div>
     
     <button id="open-senator-campaign-popup">
