--- a/interactive/ascent-app.html
+++ b/interactive/ascent-app.html
@@ -13,7 +13,11 @@ layout: default
 <div id="project-wrapper">
     <div class="push-top-double push-bottom-double">
         <h2>Ascent App</h2>
-        <p id="columns">I’m a young adult at the age of 23 named Sebastian. I am someone who is constantly growing and expanding my knowledge base and am pursuing to take on new endeavours. I am a recent graduate from the Graphic Design program at Algonquin College and during my time there and beyond I put care and attention into the projects I work on. I am at the stage where I am trying different possibilities that are out there and am figuring out what excites me the most. Simple illustration, motion graphics, and interactive UI have really grabbed me and now I am devoting more of my attention into working with motion graphics. I really enjoy the type of work that is out there and that is available for Graphic Designers to work on.</p>
+        <div id="columns">
+            <p>This app was created to help hikers measure their height climbed during a given hike. In the addition to their height, the app will be able to give the user a sense of direction with a compass and gps coordinates. The app is structured to also function as a workout app which as well as calculating the height the user has covered, the app measures the distance covered since the beginning of the climb, and a rough estimate of calories burned.</p>
+            <p>To add to the encouraging engaging experience, the user can create set goals to reach such as height he or she wishes to reach. Then the goal is tracked during the different climbs, and at the end of each summary the progress for completing the goal is measured in percentage. As another engaging feature as the users begin to use the app more and more, they will be able to compare their heights reached to other man-made structures, or natural elements to give them a wider sense of awareness of how much they have done. Such as the height of Mont. Mont Tremblant or the CN Tower for instance.</p>
+            <p>While the creation of this app is for user experience design and interface design, it would be almost ready to go into production.</p>
+        </div>
     </div>
     
     <button id="open-ascent-app-popup">
