--- a/interactive/galactic-adventures.html
+++ b/interactive/galactic-adventures.html
@@ -12,8 +12,11 @@ layout: default
 
 <div id="project-wrapper">
     <div class="push-top-double push-bottom-double">
-        <h2>Galactic Adventures</h2></h2>
-        <p id="columns">I’m a young adult at the age of 23 named Sebastian. I am someone who is constantly growing and expanding my knowledge base and am pursuing to take on new endeavours. I am a recent graduate from the Graphic Design program at Algonquin College and during my time there and beyond I put care and attention into the projects I work on. I am at the stage where I am trying different possibilities that are out there and am figuring out what excites me the most. Simple illustration, motion graphics, and interactive UI have really grabbed me and now I am devoting more of my attention into working with motion graphics. I really enjoy the type of work that is out there and that is available for Graphic Designers to work on.</p>
+        <h2>Galactic Adventures</h2>
+        <div id="columns">
+            <p>This project was about developing the interactive user experience for a created iPad game called Galactic Adventures.</p>
+            <p>During this process careful consideration was payed attention to how the user will be able to achieve certain goals to navigate through the game and play it. I wanted to create some simple and high fidelity wireframes to illustrate how the experience of using the game would work.</p>
+        </div>
     </div>
     
     <button id="open-galactic-adventures-popup">
