--- a/interactive/good-to-talk-app.html
+++ b/interactive/good-to-talk-app.html
@@ -13,7 +13,11 @@ layout: default
 <div id="project-wrapper">
     <div class="push-top-double push-bottom-double">
         <h2>Good to Talk App</h2>
-        <p id="columns">I’m a young adult at the age of 23 named Sebastian. I am someone who is constantly growing and expanding my knowledge base and am pursuing to take on new endeavours. I am a recent graduate from the Graphic Design program at Algonquin College and during my time there and beyond I put care and attention into the projects I work on. I am at the stage where I am trying different possibilities that are out there and am figuring out what excites me the most. Simple illustration, motion graphics, and interactive UI have really grabbed me and now I am devoting more of my attention into working with motion graphics. I really enjoy the type of work that is out there and that is available for Graphic Designers to work on.</p>
+        <div id="columns">
+            <p>The idea behind this app is to help people communicate in new areas around the world where they don’t speak the residential language.</p>
+            <p>The idea of this app is very simple. You would have the phone out on a table or something flat and stable. One user would speak in his or her language, and the other user would be able to read what they have said translated into their language on the app.</p>
+            <p>While the app’s idea is simple,  it would be hard to produce in production because of voice recognition variables as well as implementing proper translation of what has been said. The idea for this ap has been experimented with within the design and interface, although it is still at the early stages of assembly.</p>
+        </div>
     </div>
     
     <button id="open-good-to-talk-app-popup">
