--- a/interactive/palisar.html
+++ b/interactive/palisar.html
@@ -12,8 +12,11 @@ layout: default
 
 <div id="project-wrapper">
     <div class="push-top-double push-bottom-double">
-        <h2>Palisar</h2>
-        <p id="columns">I’m a young adult at the age of 23 named Sebastian. I am someone who is constantly growing and expanding my knowledge base and am pursuing to take on new endeavours. I am a recent graduate from the Graphic Design program at Algonquin College and during my time there and beyond I put care and attention into the projects I work on. I am at the stage where I am trying different possibilities that are out there and am figuring out what excites me the most. Simple illustration, motion graphics, and interactive UI have really grabbed me and now I am devoting more of my attention into working with motion graphics. I really enjoy the type of work that is out there and that is available for Graphic Designers to work on.</p>
+        <h2>Palisar Website Mock-up</h2>
+        <div id="columns">
+            <p>This was a mock-up created for a fictitious e-commerce website called Palisar. The website serves to sell snowboarding goods such as snowboards, jackets, T-shirts, pants, goggles, cloves, boots, bindings, etc.</p>
+            <p>This was my earlier practice of creating full website mock-ups in Photoshop. I included this piece because it was a more fully fleshed out mock-up than my more recent mock-ups. Now when I create websites, I simply do the mock-ups on paper, and then build the interactive prototype directly in the browser. It saves a step and allows for a much quicker workflow.</p>
+        </div>
     </div>
     
     <button id="open-palisar-popup">
