--- a/typography/collage.html
+++ b/typography/collage.html
@@ -12,8 +12,11 @@ layout: default
 
 <div id="project-wrapper">
     <div class="push-top-double push-bottom-double">
-        <h2>Collage</h2>
-        <p id="columns">I’m a young adult at the age of 23 named Sebastian. I am someone who is constantly growing and expanding my knowledge base and am pursuing to take on new endeavours. I am a recent graduate from the Graphic Design program at Algonquin College and during my time there and beyond I put care and attention into the projects I work on. I am at the stage where I am trying different possibilities that are out there and am figuring out what excites me the most. Simple illustration, motion graphics, and interactive UI have really grabbed me and now I am devoting more of my attention into working with motion graphics. I really enjoy the type of work that is out there and that is available for Graphic Designers to work on.</p>
+        <h2>Collage with Mixed Media</h2>
+        <div id="columns">
+            <p>This mixed media collage was done in two steps: The creation and assembly of traditional mixed snippets of photos and type on the right, then the creation of the digital layout on the left. Finally it was then brought together and united to become one piece.</p>
+            <p>The concept behind this collage was that I wanted to give the impression of fear and despair within the choice of phrases and with the type of imagery I picked to add the page. The use of very rough textured, ripped paper, distressed typefaces, and bold red colour used across the spread hopefully gives the alert and grim feel I was going after that would match the written content of the article.</p>
+        </div>
     </div>
     
     <button id="open-collage-popup">
