--- a/typography/go-with-the-flow.html
+++ b/typography/go-with-the-flow.html
@@ -12,8 +12,10 @@ layout: default
 
 <div id="project-wrapper">
     <div class="push-top-double push-bottom-double">
-        <h2>Go with the Flow</h2></h2>
-        <p id="columns">I’m a young adult at the age of 23 named Sebastian. I am someone who is constantly growing and expanding my knowledge base and am pursuing to take on new endeavours. I am a recent graduate from the Graphic Design program at Algonquin College and during my time there and beyond I put care and attention into the projects I work on. I am at the stage where I am trying different possibilities that are out there and am figuring out what excites me the most. Simple illustration, motion graphics, and interactive UI have really grabbed me and now I am devoting more of my attention into working with motion graphics. I really enjoy the type of work that is out there and that is available for Graphic Designers to work on.</p>
+        <h2>Go with the Flow – 12 Practical Steps</h2>
+        <div id="columns">
+            <p>This was a fun little project about presenting 12 practical steps for Learning to Go With the Flow. There was different takes on layout experimentation and there was also a mood board created to capture the look and feel of peace and tranquility within nature and how that esthetic could be applied to this article’s layout.</p>
+        </div>
     </div>
     
     <button id="open-go-with-the-flow-popup">
