--- a/illustration/blues-brothers.html
+++ b/illustration/blues-brothers.html
@@ -12,8 +12,12 @@ layout: default
 
 <div id="project-wrapper">
     <div class="push-top-double push-bottom-double">
-        <h2>Blues Brothers Album Cover</h2>
-        <p id="columns">I’m a young adult at the age of 23 named Sebastian. I am someone who is constantly growing and expanding my knowledge base and am pursuing to take on new endeavours. I am a recent graduate from the Graphic Design program at Algonquin College and during my time there and beyond I put care and attention into the projects I work on. I am at the stage where I am trying different possibilities that are out there and am figuring out what excites me the most. Simple illustration, motion graphics, and interactive UI have really grabbed me and now I am devoting more of my attention into working with motion graphics. I really enjoy the type of work that is out there and that is available for Graphic Designers to work on.</p>
+        <h2>The Blues Brothers Album Cover</h2>
+        <div id="columns">
+            <p>This project was an experimentation using the media of a pen and translating that medium into a pure black and white rendered illustration. This technique was inspired by the technique used in comic books where the pen drawings needed to be rendered at very high contrast for good legibility and print optimization.</p>
+            <p>The concept behind the album is that I wanted to depict the rush and the amount of time the two brothers Jake and Elwood were on the road trying to group together their band. So I included drawn out arrows pointing around to different events, the other band members, and finally back again to the two brothers to hint that the main story always seems to lead back to the main two brothers.</p>
+            <p>Creating this album involved drawing it out and then inking it on tracing paper and then rendering the inked drawing pure black and white in  Photoshop with the aid of a Wacom tablet to balance out the values.</p>
+        </div>
     </div>
     
     <button id="open-blues-brothers-popup">
