--- a/illustration/company-poster.html
+++ b/illustration/company-poster.html
@@ -12,8 +12,11 @@ layout: default
 
 <div id="project-wrapper">
     <div class="push-top-double push-bottom-double">
-        <h2>Company Poster</h2>
-        <p id="columns">I’m a young adult at the age of 23 named Sebastian. I am someone who is constantly growing and expanding my knowledge base and am pursuing to take on new endeavours. I am a recent graduate from the Graphic Design program at Algonquin College and during my time there and beyond I put care and attention into the projects I work on. I am at the stage where I am trying different possibilities that are out there and am figuring out what excites me the most. Simple illustration, motion graphics, and interactive UI have really grabbed me and now I am devoting more of my attention into working with motion graphics. I really enjoy the type of work that is out there and that is available for Graphic Designers to work on.</p>
+        <h2>Company Play</h2>
+        <div id="columns">
+            <p>This illustration was one of the earlier illustrations I created and I wanted to show it because I feel it serves as a strong graphic piece to display.</p>
+            <p>This poster was illustrated as part of a contest entry among designers to create an engaging expressive poster for the play taking place at Kalish Mital Theatre at Carleton University. The play features a colourful lively event with humor that takes place in New York city. So I wanted my illustrative poster to share the same character.</p>
+        </div>
     </div>
     
     <button id="open-company-poster-popup">
