--- a/illustration/tennis-serve.html
+++ b/illustration/tennis-serve.html
@@ -12,8 +12,10 @@ layout: default
 
 <div id="project-wrapper">
     <div class="push-top-double push-bottom-double">
-        <h2>The Tennis Serve</h2>
-        <p id="columns">I’m a young adult at the age of 23 named Sebastian. I am someone who is constantly growing and expanding my knowledge base and am pursuing to take on new endeavours. I am a recent graduate from the Graphic Design program at Algonquin College and during my time there and beyond I put care and attention into the projects I work on. I am at the stage where I am trying different possibilities that are out there and am figuring out what excites me the most. Simple illustration, motion graphics, and interactive UI have really grabbed me and now I am devoting more of my attention into working with motion graphics. I really enjoy the type of work that is out there and that is available for Graphic Designers to work on.</p>
+        <h2>The Tennis Serve – Learning the Basics</h2>
+        <div id="columns">
+            <p>This newspaper article is a project I re-visited and created one summer and I really enjoyed the process of creating this illustration. The design uses a lot of different techniques inside of illustrator to get the final result looking as it is. The illustration serves to draw the reader in to read five tips on how to serve. The 3D smooth that was created in Illustrator aids to connect the five tips all together and unifies the design.</p>
+        </div>
     </div>
     
     <button id="open-tennis-serve-popup">
