--- a/motion/blue-hen-farm.html
+++ b/motion/blue-hen-farm.html
@@ -12,8 +12,11 @@ layout: default
 
 <div id="project-wrapper">
     <div class="push-top-double push-bottom-double">
-        <h2>Blue Hen Farm</h2>
-        <p id="columns">I’m a young adult at the age of 23 named Sebastian. I am someone who is constantly growing and expanding my knowledge base and am pursuing to take on new endeavours. I am a recent graduate from the Graphic Design program at Algonquin College and during my time there and beyond I put care and attention into the projects I work on. I am at the stage where I am trying different possibilities that are out there and am figuring out what excites me the most. Simple illustration, motion graphics, and interactive UI have really grabbed me and now I am devoting more of my attention into working with motion graphics. I really enjoy the type of work that is out there and that is available for Graphic Designers to work on.</p>
+        <h2>Blue Hen Farm – Broadcast Package</h2>
+        <div id="columns">
+            <p>This broadcast package included an opening title sequence, lower thirds, and transitions. This broadcast package was for a fictitious show called Blue Hen Farm. While the show is fictitious, the actual farm is real. </p>
+            <p>I have worked with Nicolai Hadchity who has kindly provided me the video footage to be able to create this broadcast package. My part was to create all the animated motion designs.</p>
+        </div>
     </div>
     
     <button id="open-blue-hen-farm-popup">
