--- a/motion/building-a-portfolio.html
+++ b/motion/building-a-portfolio.html
@@ -12,8 +12,11 @@ layout: default
 
 <div id="project-wrapper">
     <div class="push-top-double push-bottom-double">
-        <h2>Building a Portfolio</h2>
-        <p id="columns">I’m a young adult at the age of 23 named Sebastian. I am someone who is constantly growing and expanding my knowledge base and am pursuing to take on new endeavours. I am a recent graduate from the Graphic Design program at Algonquin College and during my time there and beyond I put care and attention into the projects I work on. I am at the stage where I am trying different possibilities that are out there and am figuring out what excites me the most. Simple illustration, motion graphics, and interactive UI have really grabbed me and now I am devoting more of my attention into working with motion graphics. I really enjoy the type of work that is out there and that is available for Graphic Designers to work on.</p>
+        <h2>Building a Graphic Design Portfolio</h2>
+        <div id="columns">
+            <p>This video was part of my co-op placement in College to create an engaging teaser for an instructional video on how to prepare a portfolio to enter the Graphic Design program at Algonquin College.</p>
+            <p>I used the school brand colours and typeface throughout the video while incorporating illustrative assets to explain the different aspects of what goes into making and preparing a graphic design portfolio. The supervisor I had working with me was Diane Banks who was in charge of the marketing department at the College and she watched over the production of the video and offered me feedback as well.</p>
+        </div>
     </div>
     
     <button id="open-building-a-portfolio-popup">
