--- a/motion/demo-reel.html
+++ b/motion/demo-reel.html
@@ -12,8 +12,10 @@ layout: default
 
 <div id="project-wrapper">
     <div class="push-top-double push-bottom-double">
-        <h2>Demo Reel</h2>
-        <p id="columns">I’m a young adult at the age of 23 named Sebastian. I am someone who is constantly growing and expanding my knowledge base and am pursuing to take on new endeavours. I am a recent graduate from the Graphic Design program at Algonquin College and during my time there and beyond I put care and attention into the projects I work on. I am at the stage where I am trying different possibilities that are out there and am figuring out what excites me the most. Simple illustration, motion graphics, and interactive UI have really grabbed me and now I am devoting more of my attention into working with motion graphics. I really enjoy the type of work that is out there and that is available for Graphic Designers to work on.</p>
+        <h2>Demo Reel 2014</h2>
+        <div id="columns">
+            <p>This is my demo reel of 2014 that shows some of the creative projects I have done throughout the years I have been developing designs. Some of the projects shown there are not posted on this website yet they are still valuable to showcase. Most of them have been smaller projects used in conjunction to learning a new tool or technique within the given software being worked in. Others like the Manticore, the book cover concept, were creative projects shown to flex some creative muscles. The last piece of the reel was an undertaking of a project gone through on a course at fxphd where I began to experiment with Red Giant plugins such as Trapcode Particular and Trapcode Form to create some dynamic and realistic special effects within motion graphics.</p>
+        </div>
     </div>
     
     <button id="open-demo-reel-popup">
