--- a/motion/tennis-infographic.html
+++ b/motion/tennis-infographic.html
@@ -12,8 +12,10 @@ layout: default
 
 <div id="project-wrapper">
     <div class="push-top-double push-bottom-double">
-        <h2>Tennis Infographic</h2>
-        <p id="columns">I’m a young adult at the age of 23 named Sebastian. I am someone who is constantly growing and expanding my knowledge base and am pursuing to take on new endeavours. I am a recent graduate from the Graphic Design program at Algonquin College and during my time there and beyond I put care and attention into the projects I work on. I am at the stage where I am trying different possibilities that are out there and am figuring out what excites me the most. Simple illustration, motion graphics, and interactive UI have really grabbed me and now I am devoting more of my attention into working with motion graphics. I really enjoy the type of work that is out there and that is available for Graphic Designers to work on.</p>
+        <h2>Animated Tennis Infographic</h2>
+        <div id="columns">
+            <p>You only get one first time for everything. In this case this was my very first motion design video I created in After Effects. It bring a tennis infographic that I created to life through some movement. This was part of  our motion course at Algonquin where we were beginning to learn about keyframe animation, position, rotation, and scale within After Effects.</p>
+        </div>
     </div>
     
     <button id="open-tennis-infographic-popup">
