--- a/typography/obsessed-with-speed.html
+++ b/typography/obsessed-with-speed.html
@@ -12,8 +12,10 @@ layout: default
 
 <div id="project-wrapper">
     <div class="push-top-double push-bottom-double">
-        <h2>Obsessed with Speed</h2></h2>
-        <p id="columns">I’m a young adult at the age of 23 named Sebastian. I am someone who is constantly growing and expanding my knowledge base and am pursuing to take on new endeavours. I am a recent graduate from the Graphic Design program at Algonquin College and during my time there and beyond I put care and attention into the projects I work on. I am at the stage where I am trying different possibilities that are out there and am figuring out what excites me the most. Simple illustration, motion graphics, and interactive UI have really grabbed me and now I am devoting more of my attention into working with motion graphics. I really enjoy the type of work that is out there and that is available for Graphic Designers to work on.</p>
+        <h2>Obsessed with Speed</h2>
+        <div id="columns">
+            <p>This spread was all about emphasizing speed. In the way this experimental layout was designed I wanted to play with the use of angles and diagonal movement. Even the columns are shifted slightly to apply to the diagonal movement shown in this layout which slightly breaks the traditional linear use of straight columns.</p>
+        </div>
     </div>
     
     <button id="open-obsessed-with-speed-popup">
