refactor(all): make project titles h1 elements

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
 {% include profile.html %}
 
 <div class="about-section">
-    <h2>About</h2>
+    <h2 id="h2">About</h2>
     <div id="columns">
         <p>Thank you for stopping by. It is my hope that in the next little while you will be curious and inspired by some thoughts and underlying pursuits that designers share that go beyond simply displaying information.</p>
         
