feat(html): add video icon to motion pages

--- a/motion/building-a-portfolio.html
+++ b/motion/building-a-portfolio.html
@@ -20,7 +20,7 @@ layout: default
     </div>
     
     <button id="open-building-a-portfolio-popup">
-        <img src="{{site.baseurl}}/images/photo-icon.svg" alt="Open Image Gallery">
+        <img src="{{site.baseurl}}/images/video-icon.svg" alt="Open Image Gallery">
         <p>Watch Video</p>
     </button>
     
