--- a/motion/blue-hen-farm.html
+++ b/motion/blue-hen-farm.html
@@ -20,7 +20,7 @@ layout: default
     </div>
     
     <button id="open-blue-hen-farm-popup">
-        <img src="{{site.baseurl}}/images/photo-icon.svg" alt="Open Image Gallery">
+        <img src="{{site.baseurl}}/images/video-icon.svg" alt="Open Image Gallery">
         <p>Watch Video</p>
     </button>
     
