--- a/motion/tennis-infographic.html
+++ b/motion/tennis-infographic.html
@@ -19,7 +19,7 @@ layout: default
     </div>
     
     <button id="open-tennis-infographic-popup">
-        <img src="{{site.baseurl}}/images/photo-icon.svg" alt="Open Image Gallery">
+        <img src="{{site.baseurl}}/images/video-icon.svg" alt="Open Image Gallery">
         <p>Watch Video</p>
     </button>
     
