refactor(html): change intro paragraph a bit to be more clear

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ layout: default
 <div class="about-section">
     <h2 id="h2">About</h2>
     <div id="columns">
-        <p>Thank you for stopping by. It is my hope that in the next little while you will be curious and inspired by some thoughts and underlying pursuits that designers share that go beyond simply displaying information.</p>
+        <p>My online graphic design portfolio website is a showcase of typography, illustration, interactive media, and motion design. It is my hope that in the next little while you will be inspired by some new thoughts and ideas of new ways of displaying information.</p>
         
-        <p>My goal is to really understand a community of people. I wish to understand their values, and what is important to them. It's important for me to understand those values because I want them to translate in the designs I create. I believe that great design happens when the design stirs an audience to engage in a message and react in a positive way. Either intellectually, emotionally, or even physically. When the viewer of a given design can resonate with it and share the same characteristics and values that it promotes, then it's good design. The role I pursue in the whole design process is to communicate positive values and have my designs really impact people in a positive way.</p> 
+        <p>The reason I create designs is because I want to really understand a community of people. I wish to understand their values, and what is important to them. It's important for me to understand those values because I want them to translate in the designs I create. I believe that great design happens when the design stirs an audience to engage in a message and react in a positive way. Either intellectually, emotionally, or even physically. When the viewer of a given design can resonate with it and share the same characteristics and values that it promotes, then it's good design. The role I pursue in the whole design process is to communicate positive values and have my designs really impact people in a positive way.</p> 
         
         <p>Welcome to my Graphic Design online portfolio. I invite you take a look around and enjoy the different projects that have been posted.</p>
     </div>
