feat(all): add content to contact page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
 {% include profile.html %}
 
 <div class="about-section">
-    <h2 id="h2">About</h2>
+    <h2 id="h2">Portfolio</h2>
     <div id="columns">
         <p>My online graphic design portfolio is a showcase of typography, illustration, interactive media, and motion design. It is my hope that in the next little while you will be inspired by some new thoughts and ideas of new ways of displaying information.</p>
         
