feat(all): create border between sections on all page

--- a/all.html
+++ b/all.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div id="all-border-top">
+<div class="border-bottom">
     <section>
         <figure class="banner typo">
             <figcaption id="tab"><h5>Typography</h5></figcaption>
@@ -12,7 +12,7 @@ layout: default
 </div>
 
 
-<div id="all-border">
+<div class="border-bottom pad-top">
     <section>
         <figure class="banner illustration">
             <figcaption id="tab"><h5>Illustration</h5></figcaption>
@@ -22,7 +22,7 @@ layout: default
 </div>
 
 
-<div id="all-border">
+<div class="border-bottom pad-top">
     <section>
         <figure class="banner interactive">
             <figcaption id="tab"><h5>Interactive</h5></figcaption>
@@ -32,7 +32,7 @@ layout: default
 </div>
 
 
-<div>
+<div class="pad-top">
     <section>
         <figure class="banner motion">
             <figcaption id="tab"><h5>Motion</h5></figcaption>
