refactor(html): change div tags to section tags on all page

--- a/all.html
+++ b/all.html
@@ -2,41 +2,41 @@
 layout: default
 ---
 
-<div class="border-bottom">
+<section class="border-bottom">
     <section>
         <figure class="banner typo">
             <figcaption id="tab"><h5>Typography</h5></figcaption>
         </figure>
     </section>
     {% include typography.html %}
-</div>
+</section>
 
 
-<div class="border-bottom pad-top">
+<section class="border-bottom pad-top">
     <section>
         <figure class="banner illustration">
             <figcaption id="tab"><h5>Illustration</h5></figcaption>
         </figure>
     </section>
     {% include illustration.html %}
-</div>
+</section>
 
 
-<div class="border-bottom pad-top">
+<section class="border-bottom pad-top">
     <section>
         <figure class="banner interactive">
             <figcaption id="tab"><h5>Interactive</h5></figcaption>
         </figure>
     </section>
     {% include interactive.html %}
-</div>
+</section>
 
 
-<div class="pad-top">
+<section class="pad-top">
     <section>
         <figure class="banner motion">
             <figcaption id="tab"><h5>Motion</h5></figcaption>
         </figure>
     </section>
     {% include motion.html %}
-</div>
+</section>
