refactor(html): change section tags to div tags on all page

--- a/all.html
+++ b/all.html
@@ -2,41 +2,41 @@
 layout: default
 ---
 
-<section class="border-bottom">
+<div class="border-bottom">
     <section>
         <figure class="banner typo">
             <figcaption id="tab"><h5>Typography</h5></figcaption>
         </figure>
     </section>
     {% include typography.html %}
-</section>
+</div>
 
 
-<section class="border-bottom pad-top">
+<div class="border-bottom pad-top">
     <section>
         <figure class="banner illustration">
             <figcaption id="tab"><h5>Illustration</h5></figcaption>
         </figure>
     </section>
     {% include illustration.html %}
-</section>
+</div>
 
 
-<section class="border-bottom pad-top">
+<div class="border-bottom pad-top">
     <section>
         <figure class="banner interactive">
             <figcaption id="tab"><h5>Interactive</h5></figcaption>
         </figure>
     </section>
     {% include interactive.html %}
-</section>
+</div>
 
 
-<section class="pad-top">
+<div class="pad-top">
     <section>
         <figure class="banner motion">
             <figcaption id="tab"><h5>Motion</h5></figcaption>
         </figure>
     </section>
     {% include motion.html %}
-</section>
+</div>
