feat(html): add unique title to every page

--- a/illustration/company-poster.html
+++ b/illustration/company-poster.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Company Poster
 ---
 
 <section>
@@ -12,7 +13,7 @@ layout: default
 
 <div id="project-wrapper">
     <div class="push-top-double push-bottom-double">
-        <h1>Company Play</h1>
+        <h1>Company Poster</h1>
         <div id="columns">
             <p>This illustration was one of the earlier illustrations I created and I wanted to show it because I feel it serves as a strong graphic piece to display.</p>
             <p>This poster was illustrated as part of a contest entry among designers to create an engaging expressive poster for the play taking place at Kalish Mital Theatre at Carleton University. The play features a colourful lively event with humor that takes place in New York city. So I wanted my illustrative poster to share the same character.</p>
